--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    :root {
+      --base-heading-font-family: 'Tahoma';
+      --base-body-font-size: 18px;
+      --base-line-height: 1.5;
+      --base-primary-text-color: rgb(37, 7, 37);
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
