--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <style>
     :root {
-      --base-heading-font-family: 'Tahoma';
+      --base-heading-font-family: 'Arial';
       --base-body-font-size: 18px;
       --base-line-height: 1.5;
       --base-primary-text-color: rgb(37, 7, 37);
