--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -6,10 +6,8 @@
   <title>Document</title>
   <style>
     :root {
-      --base-heading-font-family: 'Arial';
-      --base-body-font-size: 18px;
-      --base-line-height: 1.5;
-      --base-primary-text-color: rgb(37, 7, 37);
+      --base-heading-font-family: 'Verdana';
+      --base-text-font-family: 'Verdana'
     }
   </style>
 </head>
